--- a/01-Portfolio_project/index.html
+++ b/01-Portfolio_project/index.html
@@ -8,33 +8,35 @@
 <body>
     <header>
         <p>
-            <strong><big>Portfolio</big></strong>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <strong><big>Portfolio</big></strong>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <!-- 
                 &nbsp; It inserts a space that the browser will not break at, meaning:
                 It prevents automatic line breaks at that point.Unlike normal spaces ( ), multiple &nbsp; values are preserved and shown in the browser.
             -->
-            <a href="/Projects.html"> <strong><u>Projects</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="/Certifications.html"> <strong><u> Certifications</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;         
-            <a href="/Education.html"> <strong><u>Education</u> </strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="/Experience.html"> <strong><u>Experience</u> </strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="/About.html"> <strong><u>About</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/Projects.html"> <strong><u>Projects</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/Certifications.html"> <strong><u> Certifications</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;      
+            <a href="/Education.html"> <strong><u>Education</u> </strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/Experience.html"> <strong><u>Experience</u> </strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/Experience.html"> <strong><u>Experience</u> </strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/About.html"> <strong><u>About</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="/Contact.html"> <strong><u>Contact</u></strong> </a> 
         </p>
     </header>
     
     <main>
-        <img src = "/Front.jpg" height="450" width="890" alt = "Banner">
+        <img src = "/Front.jpg" height="590" width="1340" alt = "Banner">
         <h1>Hello, I'm Rukhshanda</h1>
         <p>
-            I'm learning HTML and this is my first project. This site showcases my projects, education, experience, and certifications. Feel free to explore!
+            I'm learning HTML and this is my first project. This site showcases my projects, education, experience, and certifications.
+            Feel free to explore!
         </p>
     </main>
 
     <footer>
-         <p><a href="/Contact.html"> Contact me </a></p>
-    </footer>
-
-</body>
-</html>
+         <p><a href="/6-Contact.html"> Contact me </a></p>
