--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <p> Click any project below to view: </p>
   <ul>
     <li><a href="01-Portfolio_project/index.html"> <strong> Portfolio Project </strong> </a></li>
+    <img src="01-Portfolio_project/Front.jpg" height="590" width="1340" alt="Banner">
   </ul>
 </body>
 </html>
