--- a/01-Portfolio_project/index.html
+++ b/01-Portfolio_project/index.html
@@ -35,7 +35,7 @@
     </header>
     
     <main>
-        <img src = "/Front.jpg" height="590" width="1340" alt = "Banner">
+        <img src = "Front.jpg" height="590" width="1340" alt = "Banner">
         <h1>Hello, I'm Rukhshanda</h1>
         <p>
             I'm learning HTML and this is my first project. This site showcases my projects, education, experience, and certifications. 
