--- a/01-Portfolio_project/index.html
+++ b/01-Portfolio_project/index.html
@@ -21,15 +21,15 @@
                 It prevents automatic line breaks at that point.Unlike normal spaces ( ), multiple &nbsp; values are preserved and shown 
                 in the browser.
             -->
-            <a href="/1-Projects.html"> <strong><u>Projects</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/1-Projects.html"> <strong><u>Projects</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;
-            <a href="/2-Certifications.html"> <strong><u> Certifications</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/2-Certifications.html"> <strong><u> Certifications</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;      
-            <a href="3-Education.html"> <strong><u>Education</u> </strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="3-Education.html"> <strong><u>Education</u> </strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;
-            <a href="/4-Experience.html"> <strong><u>Experience</u> </strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/4-Experience.html"> <strong><u>Experience</u> </strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;
-            <a href="/5-About.html"> <strong><u>About</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/5-About.html"> <strong><u>About</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="/6-Contact.html"> <strong><u>Contact</u></strong> </a> 
         </p>
     </header>
