--- a/01-Portfolio_project/index.html
+++ b/01-Portfolio_project/index.html
@@ -15,18 +15,20 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;
+            &nbsp;
             <!-- 
                 &nbsp; It inserts a space that the browser will not break at, meaning:
                 It prevents automatic line breaks at that point.Unlike normal spaces ( ), multiple &nbsp; values are preserved and shown 
                 in the browser.
             -->
-            <a href="/1-Projects.html"> <strong><u>Projects</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/1-Projects.html"> <strong><u>Projects</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="/2-Certifications.html"> <strong><u> Certifications</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;   
-            <a href="3-Education.html"> <strong><u>Education</u> </strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="/4-Experience.html"> <strong><u>Experience</u> </strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="/5-About.html"> <strong><u>About</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;   
+            <a href="3-Education.html"> <strong><u>Education</u> </strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;
+            <a href="/4-Experience.html"> <strong><u>Experience</u> </strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;
+            <a href="/5-About.html"> <strong><u>About</u></strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="/6-Contact.html"> <strong><u>Contact</u></strong> </a> 
         </p>
     </header>
@@ -35,7 +37,7 @@
         <img src = "Front.jpg" height="590" width="1340" alt = "Banner">
         <h1>Hello, I'm Rukhshanda</h1>
         <p>
-            I'm learning HTML and this is my first project. This site showcases my projects, education, experience, and certifications. 
+            I'm learning HTML and this is my very first project. This site showcases my projects, education, experience, and certifications. 
             Feel free to explore!
         </p>
     </main>
