--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
   <ul>
     <li><a href="01-Portfolio_project/index.html"> <strong> Portfolio Project </strong> </a></li>
   </ul>
+<ul>
+    <li><a href="02-Contact_form/index.html"> <strong> Contact form Project </strong> </a></li>
+</ul>
+
 </body>
 </html>
