--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li><a href="3-Questionare/index.html"> <strong> Logo Design Questionare </strong> </a></li>
   </ul>
   <ul>
-    <li><a href="04-Recipies_website/INDEX.HTML"> <strong> Recipie Website </strong> </a></li>
+    <li><a href="04-Recipies_website/index.html"> <strong> Recipie Website </strong> </a></li>
   </ul>
 
 </body>
