--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <title> HTML Practice Projects </title>
 </head>
 <body>
+<header>
   <h1>My HTML Practice Projects</h1>
+</header>
+  
+<main>
   <p> Click any project below to view: </p>
   <ul>
     <li><a href="01-Portfolio_project/index.html"> <strong> Portfolio Project </strong> </a></li>
@@ -20,6 +24,13 @@
   <ul>
     <li><a href="04-Recipies_website/index.html"> <strong> Recipie Website </strong> </a></li>
   </ul>
+</main>
+
+<footer>
+   <h5>
+       Designed & Developed by RUKHSHANDA BATOOL
+   </h5>
+</footer>
 
 </body>
 </html>
