--- a/04-Recipies_website/Recipies/03-Pizza/Pizza1.html
+++ b/04-Recipies_website/Recipies/03-Pizza/Pizza1.html
@@ -6,21 +6,26 @@
     <title> Pepperoni Pizza </title>
 </head>
 <body style="background-color: #eaed80">
+    <!-- Navigation link -->
     <nav>
-        <a href="../Pizza/index.html"> → </a>
+        <a href="../03-Pizza/index.html"> → </a>
     </nav>
     
+    <!-- Header of the page -->
     <header>
         <h1> 🍕 Pepperoni Pizza  </h1>
     </header>
 
+    <!-- Mian section -->
     <main>
+        <!-- section 1 -->
         <section>
-            <img src = "/P_Pizza1.jpg" alt = "Pizza" height = "300">
+            <img src = "../../Images/P_Pizza1.jpg" alt = "Pizza" height = "300">
             &nbsp;&nbsp;
-            <img src = "/P_Pizza2.jpg" alt = "Pizza1" height = "300">
+            <img src = "../../Images/P_Pizza2.jpg" alt = "Pizza1" height = "300">
         </section>
 
+        <!-- section 2 -->
         <section>
             <strong> Prep Time: </strong> 20 minutes
             <strong> 🕒 Cook Time: </strong> 12-15 minutes
@@ -29,6 +34,7 @@
 
         <br /> 
 
+        <!-- section 3 -->
         <section>
             <h3> Ingredients 🛒 </h5>
     
@@ -51,6 +57,7 @@
             </ol>
         </section>
 
+        <!-- section 4 -->
         <section>
             <h3> 👩‍🍳 Instructions </h3>
             <ul>
@@ -65,10 +72,11 @@
         </section>
     </main>
 
+    <!-- Footer of the page -->
     <footer>
-        <strong> 
+        <h5> 
             Enjoy every bite you make, and let others share in the joy too.😉
-        </strong>
+        </h5>
     </footer>
 </body>
 </html>
