--- a/04-Recipies_website/Recipies/03-Pizza/Pizza2.html
+++ b/04-Recipies_website/Recipies/03-Pizza/Pizza2.html
@@ -6,21 +6,26 @@
     <title> Neapolitan Pizza </title>
 </head>
 <body style="background-color: #eaed80">
+    <!-- Naviigation link -->
     <nav>
-        <a href="../Pizza/index.html"> → </a>
+        <a href="../03-Pizza/index.html"> → </a>
     </nav>
     
+    <!-- Header of the page -->
     <header>
         <h1> 🍕 Neapolitan Pizza  </h1>
     </header>
 
+    <!-- Main section -->
     <main>
+        <!-- section 1 -->
         <section>
-            <img src = "/N_Pizza.jpg" alt = "Pizza" height = "300">
+            <img src = "../../Images/N_Pizza.jpg" alt = "Pizza" height = "300">
             &nbsp;&nbsp;
-            <img src = "/N_Pizza1.jpg" alt = "Pizza1" height = "300">
+            <img src = "../../Images/N_Pizza1.jpg" alt = "Pizza1" height = "300">
         </section>
 
+        <!-- section 2 -->
         <section>
             <strong> Prep Time: </strong> 20 minutes
             <strong> 🕒 Cook Time: </strong> 10-12 minutes
@@ -29,6 +34,7 @@
 
         <br /> 
 
+        <!-- section 3 -->
         <section>
             <h3> Ingredients 🛒 </h3>
     
@@ -52,6 +58,7 @@
             </ol>
         </section>
 
+        <!-- section 4 -->
         <section>
             <h3> 👩‍🍳 Instructions </h3>
             <ul>
@@ -64,12 +71,13 @@
                 <li> Garnish with fresh basil before serving. </li>
             </ul>
         </section>
+    </main>
 
-
-        <footer>
-            <strong> 
-                Enjoy every bite you make, and let others share in the joy too.😉
-            </strong>
-        </footer>
+    <!-- Footer of the page -->
+    <footer>
+        <h5> 
+            Enjoy every bite you make, and let others share in the joy too.😉
+        </h5>
+    </footer>
 </body>
 </html>
