--- a/04-Recipies_website/Recipies/04-Tacos/index.html
+++ b/04-Recipies_website/Recipies/04-Tacos/index.html
@@ -6,20 +6,26 @@
     <title> Mexican Beef Tacos  </title>
 </head>
 <body style="background-color: #abb32e">
+    <!-- Navigation link -->
     <nav>
         <a href="../index.html"> → </a>
     </nav>
     
+    <!-- Header of the page -->
     <header>
         <h1> <strong> 🌮 Classic Mexican Beef Tacos Recipe </strong> </h1>
     </header>
+
+    <!-- Main section -->
     <main>
+        <!-- section 1 -->
         <section>
-            <img src = "/Taco1.jpg" alt = "Maxixan Tacco" height = "300">
+            <img src = "../../Images/Taco1.jpg" alt = "Maxixan Tacco" height = "300">
             &nbsp;&nbsp;
-            <img src = "/Taco2.jpg" alt = "Maxican Tacco" height = "300">
+            <img src = "../../Images/Taco2.jpg" alt = "Maxican Tacco" height = "300">
         </section>
 
+        <!-- section 2 -->
         <section>
             <strong> Prep Time: </strong> 20 minutes
             <strong> 🕒 Cook Time: </strong> 15 minutes
@@ -28,6 +34,7 @@
 
         <br /> 
 
+        <!-- section 3 -->
         <section>
             <h3> Ingredients 🛒 </h3>
     
@@ -58,6 +65,7 @@
             </ol>
         </section>
 
+        <!-- section 4 -->
         <section>
             <h3> 👩‍🍳 Instructions </h3>
             <ul>
@@ -76,10 +84,11 @@
         </section>
     </main>
 
+    <!-- Footer of the page -->
     <footer>
-        <strong> 
+        <h5> 
             Enjoy every bite you make, and let others share in the joy too.😉 
-        </strong>
+        </h5>
     </footer>
 
 </body>
