--- a/04-Recipies_website/Recipies/08-Thai_curry/index.html
+++ b/04-Recipies_website/Recipies/08-Thai_curry/index.html
@@ -3,24 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Curry </title>
+    <title> Thai Curry </title>
 </head>
 <body style="background-color: #abb32e">
+    <!-- Navigation link -->
     <nav>
         <a href="../index.html"> → </a>
     </nav>
 
+    <!-- Header of the page -->
     <header>
         <h1><strong> 🍛 Massaman Curry (Thailand) </strong></h1>
     </header>
-    
+   
+    <!-- Main section -->
     <main>
+        <!-- section 1 -->
         <section>
-            <img src = "/curry1.jpg" alt = "Thai_Curry" height = "300">
+            <img src = "../../Images/curry1.jpg" alt = "Thai_Curry" height = "300">
             &nbsp;&nbsp;
-            <img src = "/Curry2.jpg" alt = "Thai_Curry" height = "300">
+            <img src = "../../Images/Curry2.jpg" alt = "Thai_Curry" height = "300">
         </section>
 
+        <!-- section 2 -->
         <section>
             <strong> Prep Time: </strong> 25 minutes
             <strong> 🕒 Cook Time: </strong> 45 minutes
@@ -28,7 +33,7 @@
         </section>
 
         <br /> 
-
+        <!-- section 3 -->
         <section>
             <h3>🛒 Ingredients</h3>
 
@@ -62,52 +67,98 @@
             </ul>
         </section>
 
+        <!-- section 4 -->
         <section>
-            <h3> 👩‍🍳 Method </h3>
+            <h3> 👩‍🍳 Instructions </h3>
             <ol>
-                <li>
-                    <strong> Prepare the Base: </strong> 
-                    Heat oil in a large pot or wok. Add massaman curry paste and fry for 1-2 minutes until 
-                    fragrant.
+                <li> Prepare the Base: 
+                    <ul>
+                        Heat oil in a large pot or wok. Add massaman curry paste and fry for 1-2 minutes until 
+                        fragrant.
+                    </ul> 
                 </li>
-                <li>
-                    <strong> Add Coconut Milk: </strong> 
-                    Pour in half of the coconut milk and stir until the paste is well mixed and aromatic.
+            </ol>
+
+            <ol>
+                <li> Add Coconut Milk: 
+                    <ul>
+                        <li>
+                            Pour in half of the coconut milk and stir until the paste is well mixed and aromatic.
+                        </li>
+                    </ul> 
                 </li>
-                <li>
-                    <strong> Cook the Meat: </strong> 
-                    Add beef/chicken/lamb chunks and cook for 5 minutes until lightly browned.
+            </ol>
+
+            <ol>
+                <li> Cook the Meat:
+                    <ul>
+                        <li>
+                            Add beef/chicken/lamb chunks and cook for 5 minutes until lightly browned.
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <strong> Add Vegetables: </strong> 
-                    Stir in onions and potatoes. Add the remaining coconut milk and 1 cup of water.
+            </ol>
+
+            <ol>
+                <li> Add Vegetables: 
+                    <ul>
+                        <li>
+                            Stir in onions and potatoes. Add the remaining coconut milk and 1 cup of water.
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <strong> Season: </strong> 
-                    Add fish sauce, tamarind paste, palm sugar, cinnamon sticks, cardamom, and bay leaves. 
-                    Stir well.
+            </ol>
+
+            <ol>
+                <li> Season:  
+                    <ul>
+                        <li>
+                            Add fish sauce, tamarind paste, palm sugar, cinnamon sticks, cardamom, and bay leaves. 
+                            Stir well.
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <strong> Simmer: </strong> 
-                    Cover and cook on low heat for 30-40 minutes until meat is tender and potatoes are cooked.
+            </ol>
+
+            <ol>
+                <li> Simmer:
+                    <ul>
+                        <li>
+                            Cover and cook on low heat for 30-40 minutes until meat is tender and potatoes are cooked.
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <strong> Finish: </strong> 
-                    Add roasted peanuts and adjust seasoning (more sugar, salt, or tamarind if needed).
+            </ol>
+
+            <ol>
+                <li> Finish: 
+                    <ul>
+                        <li>
+                            Add roasted peanuts and adjust seasoning (more sugar, salt, or tamarind if needed).
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <strong> Serve: </strong> 
-                    Garnish with fresh coriander. Serve hot with jasmine rice and lime wedges.
+            </ol>
+
+            <ol>
+                <li> Serve: 
+                    <ul>
+                        <li>
+                            Garnish with fresh coriander. Serve hot with jasmine rice and lime wedges.
+                        </li>
+                    </ul>
                 </li>
             </ol>
         </section>
     </main>
     
+    <!-- Footer of the page -->
     <footer>
-        <strong> 
+        <h5> 
             Enjoy every bite you make, and let others share in the joy too.😉 
-        </strong>
+        </h5>
     </footer>
 
+
 </body>
-</html>
+                            </html>
