--- a/04-Recipies_website/Recipies/10-Peking_Duck/index.html
+++ b/04-Recipies_website/Recipies/10-Peking_Duck/index.html
@@ -6,10 +6,12 @@
     <title> Peking Duck </title>
 </head>
 <body style="background-color: #abb32e">
+    <!-- Navigation link -->
     <nav>
         <a href="../index.html"> → </a>
     </nav>
 
+    <!-- Header of the page -->
     <header>
         <h1><strong> 🦆 Peking Duck (China) </strong></h1>
         <h5> Peking Duck (China), one of the most famous Chinese dishes 🍗🦆 </h5>
@@ -20,13 +22,16 @@
         </p>
     </header>
     
+    <!-- Main section -->
     <main>
+        <!-- section 1 -->
         <section>
-            <img src = "/duck1.jpg" alt = "Peking_duck" height = "400">
+            <img src = "../../Images/duck1.jpg" alt = "Peking_duck" height = "400">
             &nbsp;&nbsp;
-            <img src = "/duck2.jpg" alt = "Peking_Duck" height = "400">
+            <img src = "../../Images/duck2.jpg" alt = "Peking_Duck" height = "400">
         </section>
 
+        <!-- section 2 -->
         <section>
             <strong> Prep Time: </strong> 30 minutes (plus overnight drying)
             <strong> 🕒 Cook Time: </strong> 1 hour 30 minutes
@@ -34,12 +39,12 @@
         </section>
 
         <br /> 
-
+        <!-- section 3 -->
         <section>
             <h3>🛒 Ingredients</h3>
 
             <h4> For the Duck </h4>
-            <ul>
+            <ol>
                 <li> 1 whole duck (about 2-2.5 kg) </li>
                 <li> 2 tbsp honey </li>
                 <li> 2 tbsp soy sauce </li>
@@ -48,56 +53,90 @@
                 <li> 2 tsp salt </li>
                 <li> 4-5 slices ginger </li>
                 <li> 2 spring onions (cut into halves) </li>
-            </ul>
+            </ol>
 
             <h4>For Serving:</h4>
-            <ul>
+            <ol>
                 <li> Chinese pancakes (or thin tortillas as substitute) </li>
                 <li> Spring onions (sliced into thin strips) </li>
                 <li> Cucumber strips </li>
                 <li> Hoisin sauce (or plum sauce) </li>
-            </ul>
+            </ol>
         </section>
 
+        <!-- section 4 -->
         <section>
-            <h3> 👩‍🍳 Method </h3>
+            <h3> 👩‍🍳 Instructions </h3>
             <ol>
-                <li>
-                    <strong> Prep the Duck: </strong> 
-                    Clean and pat dry the duck. Rub inside with salt, five-spice powder, ginger, and 
-                    spring onions.
+                <li> Prep the Duck: 
+                    <ul>
+                        <li>
+                            Clean and pat dry the duck. Rub inside with salt, five-spice powder, ginger, and 
+                            spring onions.
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <strong> Glaze: </strong> 
-                    Mix honey, soy sauce, and vinegar. Brush this mixture over the duck skin.
+            </ol>
+
+            <ol>
+                <li> Glaze: 
+                    <ul>
+                        <li>
+                            Mix honey, soy sauce, and vinegar. Brush this mixture over the duck skin.
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <strong> Dry Overnight: </strong> 
-                    Hang or place the duck uncovered in the fridge overnight (this makes the skin crispy).
+            </ol>
+
+            <ol>
+                <li> Dry Overnight:  
+                    <ul>
+                        <li>
+                            Hang or place the duck uncovered in the fridge overnight (this makes the skin crispy).
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <strong> Roast: </strong> 
-                    Preheat oven to 190°C (375°F). Roast duck for about 1.5 hours, basting occasionally 
-                    until skin is golden and crispy.
+            </ol>
+
+            <ol>
+                <li> Roast: 
+                    <ul>
+                        <li>
+                            Preheat oven to 190°C (375°F). Roast duck for about 1.5 hours, basting occasionally 
+                            until skin is golden and crispy.
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <strong> Carve: </strong> 
-                    Slice the crispy skin and meat into thin pieces.
+            </ol>
+
+            <ol>
+                <li> Carve: 
+                    <ul>
+                        <li>
+                            Slice the crispy skin and meat into thin pieces.
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <strong> Serve: </strong> Place duck slices in pancakes with cucumber, spring onions, 
-                    and hoisin sauce. Roll and enjoy!
+            </ol>
+
+            <ol>
+                <li> Serve: 
+                    <ul>
+                        <li>
+                            Place duck slices in pancakes with cucumber, spring onions, and hoisin sauce. Roll and enjoy!
+                        </li>
+                    </ul>
                 </li>
             </ol>
         </section>
     </main>
     
+    <!-- Footer of the page -->
     <footer>
-        <strong> 
+        <h5> 
             Enjoy every bite you make, and let others share in the joy too.😉 
-        </strong>
+        </h5>
     </footer>
-
 
 </body>
 </html>
