--- a/04-Recipies_website/Recipies/12-Tteokbokki/index.html
+++ b/04-Recipies_website/Recipies/12-Tteokbokki/index.html
@@ -6,10 +6,12 @@
     <title> Tteokbokki </title>
 </head>
 <body style="background-color: #abb32e">
+    <!-- Navigation link -->
     <nav>
         <a href="../index.html"> → </a>
     </nav>
 
+    <!-- Header of the page -->
     <header>
         <h1><strong> 🔥 Tteokbokki (Spicy Korean Rice Cakes)  </strong></h1>
         <h5>
@@ -18,13 +20,16 @@
         </h5>
     </header>
     
+    <!-- Main section -->
     <main>
+        <!-- section 1 -->
         <section>
-            <img src = "/tteok1.jpg" alt = "Tteokbokki" height = "300">
+            <img src = "../../Images/tteok1.jpg" alt = "Tteokbokki" height = "300">
             &nbsp;&nbsp;
-            <img src = "/tteok2.jpg" alt = "Tteokbokki" height = "300">
+            <img src = "../../Images/tteok2.jpg" alt = "Tteokbokki" height = "300">
         </section>
 
+        <!-- section 2 -->
         <section>
             <strong> Prep Time: </strong> 10 minutes 
             <strong> 🕒 Cook Time: </strong> 15 minutes 
@@ -32,22 +37,22 @@
         </section>
 
         <br /> 
-
+        <!-- section 3 -->
         <section>
             <h3>🛒 Ingredients</h3>
 
             <h4> Main Ingredients </h4>
-            <ul>
+            <ol>
                 <li> 1 pound (450 g) Korean rice cakes (tteok, cylindrical type) </li>
                 <li> 4-5 Korean fish cakes (optional, cut into strips) </li>
                 <li> 3 cups water (or anchovy broth for richer flavor) </li>
                 <li> 2 green onions (cut into 2-inch pieces) </li>
                 <li> 1 boiled egg per serving (optional, for garnish) </li>
                 <li> Sesame seeds (for garnish) </li>
-            </ul>
+            </ol>
 
             <h4> For the Sauce </h4>
-            <ul>
+            <ol>
                 <li> 3 tbsp gochujang (Korean red chili paste) </li>
                 <li> 1 tbsp gochugaru (Korean chili flakes, optional for extra heat) </li>
                 <li> 2 tbsp soy sauce </li>
@@ -55,12 +60,13 @@
                 <li> 1 tbsp corn syrup (or extra sugar) </li>
                 <li> 2 tsp minced garlic </li>
                 <li> 1 tsp sesame oil </li>
-            </ul>
+            </ol>
         </section>
 
+        <!-- section 4 -->
         <section>
             <h3> 👩‍🍳 Instructions </h3>
-            <ol>
+            <ul>
                 <li>
                     If rice cakes are hard, soak them in warm water for 10-15 minutes.
                 </li>
@@ -84,14 +90,15 @@
                 <li>
                     Enjoy hot — chewy, spicy, and slightly sweet! 😋
                 </li>
-            </ol>
+            </ul>
         </section>
     </main>
     
+    <!-- Footer of the page -->
     <footer>
-        <strong> 
+        <h5> 
             Enjoy every bite you make, and let others share in the joy too.😉 
-        </strong>
+        </h5>
     </footer>
 
 
