--- a/04-Recipies_website/Recipies/13-Cheese_cake/index.html
+++ b/04-Recipies_website/Recipies/13-Cheese_cake/index.html
@@ -6,10 +6,12 @@
     <title> Cheese Cake </title>
 </head>
 <body style="background-color: #abb32e">
+    <!-- Navigation link -->
     <nav>
         <a href="../index.html"> → </a>
     </nav>
 
+    <!-- Header of the page -->
     <header>
         <h1><strong> 🧁 Cheesecake Recipe (Classic New York Style)  </strong></h1>
         <h5>
@@ -18,13 +20,16 @@
         </h5>
     </header>
     
+    <!-- Main section -->
     <main>
+        <!-- section 1 -->
         <section>
-            <img src = "/Cheese1.jpg" alt = "cheese_cake" height = "300">
+            <img src = "../../Images/Cheese1.jpg" alt = "cheese_cake" height = "300">
             &nbsp;&nbsp;
-            <img src = "/cheese_use.jpg" alt = "cheese_cake" height = "300">
+            <img src = "../../Images/cheese_use.jpg" alt = "cheese_cake" height = "300">
         </section>
 
+        <!-- section 2 -->
         <section>
             <strong> Prep Time: </strong> 25 minutes
             <strong> 🕒 Cook Time: </strong> 1 hour + cooling
@@ -33,29 +38,31 @@
 
         <br /> 
 
+        <!-- section 3 -->
         <section>
             <h3> 🧀 Ingredients </h3>
 
             <h4> For the Crust </h4>
-            <ul>
+            <ol>
                 <li> 1 and ½ cups crushed graham crackers (or digestive biscuits) </li>
                 <li> ⅓ cup melted butter </li>
                 <li> 2 tbsp sugar </li>
-            </ul>
+            </ol>
 
             <h4> For the Filling </h4>
-            <ul>
+            <ol>
                 <li> 900g cream cheese (softened) </li>
                 <li> 1 cup granulated sugar </li>
                 <li> 1 cup sour cream </li>
                 <li> 1 tsp vanilla extract </li>
                 <li> 4 large eggs </li>
-            </ul>
+            </ol>
         </section>
 
+        <!-- section 4 -->
         <section>
             <h3> 👩‍🍳 Instructions </h3>
-            <ol>
+            <ul>
                 <li>
                     Preheat oven to 325°F (160°C). Grease a 9-inch springform pan.
                 </li>
@@ -72,16 +79,16 @@
                 <li>
                     Cool completely, then chill for 4 hours before serving.
                 </li>
-            </ol>
+            </ul>
         </section>
     </main>
     
+    <!-- Footer of the page -->
     <footer>
-        <strong> 
+        <h5> 
             Enjoy every bite you make, and let others share in the joy too.😉 
-        </strong>
+        </h5>
     </footer>
-
 
 </body>
 </html>
