--- a/04-Recipies_website/Recipies/14-Fried_chicken/index.html
+++ b/04-Recipies_website/Recipies/14-Fried_chicken/index.html
@@ -6,10 +6,12 @@
     <title> Fried Chicken </title>
 </head>
 <body style="background-color: #abb32e">
+    <!-- Navigation link -->
     <nav>
         <a href="../index.html"> → </a>
     </nav>
 
+    <!-- Header of the page -->
     <header>
         <h1><strong> 🍗 Crispy Fried Chicken Recipe  </strong></h1>
         <h5>
@@ -18,13 +20,16 @@
         </h5>
     </header>
     
+    <!-- Main section -->
     <main>
+        <!-- section 1 -->
         <section>
-            <img src = "/Chicken_use.jpg" alt = "Fried_chicken" height = "300">
+            <img src = "../../Images/Chicken_use.jpg" alt = "Fried_chicken" height = "300">
             &nbsp;&nbsp;
-            <img src = "/Chicken2.jpg" alt = "Fried_chicken" height = "300">
+            <img src = "../../Images/Chicken2.jpg" alt = "Fried_chicken" height = "300">
         </section>
 
+        <!-- section 2 -->
         <section>
             <strong> Prep Time: </strong> 20 minutes
             <strong> 🕒 Cook Time: </strong> 15-18 minutes
@@ -32,35 +37,34 @@
         </section>
 
         <br /> 
-
+        <!-- section 3 -->
         <section>
-            <h3> 🧀 Ingredients </h3>
-
             <h3>🍗 Ingredients</h3>
 
-            <h5>Marinade:</h5>
-            <ul>
+            <h5> Marinade </h5>
+            <ol>
                 <li>500g chicken pieces (legs or breast)</li>
                 <li>1 cup buttermilk</li>
                 <li>1 tsp salt</li>
                 <li>½ tsp black pepper</li>
                 <li>1 tsp paprika</li>
                 <li>½ tsp garlic powder</li>
-            </ul>
+            </ol>
 
             <h5>For Coating:</h5>
-            <ul>
+            <ol>
                 <li>1 ½ cups all-purpose flour</li>
                 <li>1 tsp baking powder</li>
                 <li>½ tsp chili powder</li>
                 <li>½ tsp salt</li>
                 <li>Oil for deep frying</li>
-            </ul>
+            </ol>
         </section>
 
+        <!-- section 4 -->
         <section>
             <h3> 👩‍🍳 Instructions </h3>
-            <ol>
+            <ul>
                 <li>
                     Marinate chicken in buttermilk and spices for 2 hours (or overnight for best flavor).
                 </li>
@@ -76,16 +80,16 @@
                 <li>
                     Drain on paper towels and serve hot with sauce.
                 </li>
-            </ol>
+            </ul>
         </section>
     </main>
     
+    <!-- Footer of the page -->
     <footer>
-        <strong> 
+        <h5> 
             Enjoy every bite you make, and let others share in the joy too.😉 
-        </strong>
+        </h5>
     </footer>
-
 
 </body>
 </html>
