--- a/04-Recipies_website/Recipies/15-Loaded_fries/index.html
+++ b/04-Recipies_website/Recipies/15-Loaded_fries/index.html
@@ -6,10 +6,12 @@
     <title> Loaded Fries </title>
 </head>
 <body style="background-color: #abb32e">
+    <!-- Navigation link -->
     <nav>
         <a href="../index.html"> → </a>
     </nav>
 
+    <!-- Header of the page -->
     <header>
         <h1><strong> 🍟 Loaded Fries Recipe  </strong></h1>
         <h5>
@@ -17,14 +19,17 @@
             crowd-favorite snack that originated in Canada, inspired by poutine.
         </h5>
     </header>
-    
+   
+    <!-- Main section -->
     <main>
+        <!-- section 1 -->
         <section>
-            <img src = "/Loaded1.jpg" alt = "Loaded_fries" height = "300">
+            <img src = "../../Images/Loaded1.jpg" alt = "Loaded_fries" height = "300">
             &nbsp;&nbsp;
-            <img src = "/Loaded_use.jpg" alt = "Loaded_fries" height = "300">
+            <img src = "../../Images/Loaded_use.jpg" alt = "Loaded_fries" height = "300">
         </section>
 
+        <!-- section 2 -->
         <section>
             <strong> Prep Time: </strong> 10 minutes
             <strong> 🕒 Cook Time: </strong> 20 minutes
@@ -32,11 +37,11 @@
         </section>
 
         <br /> 
-
+        <!-- section 3 -->
         <section>
             <h3> 🍟 Ingredients </h3>
 
-            <ul>
+            <ol>
                 <li> 3 large potatoes (cut into fries) or frozen fries </li>
                 <li> ½ cup shredded cheddar cheese </li>
                 <li> 4 slices cooked beef bacon or chicken pieces </li>
@@ -45,12 +50,13 @@
                 <li> ½ tsp black pepper </li>
                 <li> 1 tsp paprika (optional) </li>
                 <li> Chopped green onions (for garnish) </li>
-            </ul>
+            </ol>
         </section>
 
+        <!-- section 4 -->
         <section>
             <h3> 👩‍🍳 Instructions </h3>
-            <ol>
+            <ul>
                 <li>
                     Bake or fry fries until golden and crispy.
                 </li>
@@ -67,16 +73,16 @@
                 <li>
                     Sprinkle black pepper, paprika, and garnish with green onions. Serve immediately!
                 </li>
-            </ol>
+            </ul>
         </section>
     </main>
     
+    <!-- Footer of the page -->
     <footer>
-        <strong> 
+        <h5> 
             Enjoy every bite you make, and let others share in the joy too.😉 
-        </strong>
+        </h5>
     </footer>
-
 
 </body>
 </html>
