--- a/04-Recipies_website/Recipies/index.html
+++ b/04-Recipies_website/Recipies/index.html
@@ -21,7 +21,7 @@
             &nbsp; is used to add inline space.
         -->
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href = "01-Choclate_cake/index.html"> <img src  = "/cake1.jpg" height = "263" width = "413" alt = "Choclate_cake"></a>
+        <a href = "01-Choclate_cake/index.html"> <img src  = "../Images/cake1.jpg" height = "263" width = "413" alt = "Choclate_cake"></a>
         <!-- Choclate cake recipie -->
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
