--- a/04-Recipies_website/index.html
+++ b/04-Recipies_website/index.html
@@ -11,7 +11,7 @@
         <div style="position: relative; text-align: center;">
         
         <!-- 🖼️ Banner Image (fills full screen width, auto height to keep proportions) -->
-        <img src="/Images/Homepage.svg" alt="Website Banner" style="width: 100%; height: auto; display: block;" />
+        <img src="../Images/Homepage.svg" alt="Website Banner" style="width: 100%; height: auto; display: block;" />
 
         <!--  Navigation Overlay (sits ON TOP of the banner) -->
         <!-- means, showing navigation optive on top of home screen image -->
