--- a/04-Recipies_website/About/index.html
+++ b/04-Recipies_website/About/index.html
@@ -62,7 +62,7 @@
             <h4>
                 &nbsp;&nbsp;&nbsp;Designed & Developed by 
                 <br>
-                @RUKHSHANDA BATOOL.
+                © 2025 RUKHSHANDA BATOOL.
             </h4>
         </section>
     </div>
